--- a/Nivell3/style.css
+++ b/Nivell3/style.css
@@ -59,13 +59,12 @@ input{
 
 button{
     display: block;
-    display: block;
     background-color: rgba(0, 0, 0, 0.5);
     cursor: pointer;
     padding: 0.5rem;
     max-width: 9rem;
     margin: 20px auto 20px auto;
-    color: white;        
+    color: white;
     text-decoration: none;
     font-size: 1.5rem;
     text-align: center;
@@ -74,7 +73,8 @@ button{
     transition: .2s ease-in;
 }
 
-button:hover{
+button:hover,
+button:focus{
     transform: scale(1.05);
     background-color: yellowgreen;
 }
